--- a/src/app/funds/balance/qubera-mob/qubera-mob.component.html
+++ b/src/app/funds/balance/qubera-mob/qubera-mob.component.html
@@ -97,7 +97,7 @@
                 </div>
                 <div>
                   <span>{{balances.availableBalance?.currencyCode}}</span>
-                  <!-- <span class="balance__currency-name">US Dollar</span> -->
+                  <span class="balance__currency-name">Euro</span>
                 </div>
               </div>
             </td>
