--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -20,7 +20,7 @@
               <img src="assets/img/currency-icons/eur-white.svg">
             </div>
             <span style="min-width: 70px;">{{balances.availableBalance?.currencyCode}}</span>
-            <!-- <span class="balance__currency-name">{{balances.currentBalance?.currencyCode}}</span> -->
+            <span class="balance__currency-name">Euro</span>
           </div>
         </td>
         <td class="table__cell table__cell--tal">
