--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -56,6 +56,8 @@
         (selectTab)="onSelectTab($event)"
         (quberaKycVerification)="goToQuberaKYCPopup($event)"
         (createQuberaAccount)="goToCreateQuberaAccountPopup($event)"
+        (openRefillBalancePopup)="openRefillBalancePopup($event)"
+        (openSendMoneyPopup)="openSendMoneyPopup($event)"
       ></app-qubera-mob>
 
       <app-ieo-table-mob
