DEVEX-3282 added cheating compoent

--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -62,7 +62,14 @@
             ></app-price-input>
           </div>
         </div>
-        <div class="row row--jcsb widget__trading-row  input-row">
+
+        <!-- TODO make cheating input for price market -->
+        <div class="row row--jcsb widget__trading-row  input-row d-none" [ngClass]="{'d-flex': dropdownLimitValue === baseType.MARKET_PRICE}">
+          <app-cheating-input></app-cheating-input>
+        </div>
+
+
+        <div class="row row--jcsb widget__trading-row  input-row" [ngClass]="{'d-none': dropdownLimitValue === baseType.MARKET_PRICE}">
           <div class="wrap-input widget__input no-line">
             <app-price-input
             [placeholder]="translateService.instant('Limit Price')"
@@ -85,7 +92,7 @@
             ></app-price-input>
           </div>
         </div>
-        <div class="row row--jcsb widget__trading-row  input-row"  [ngClass]="{'d-none': dropdownLimitValue == baseType.MARKET_PRICE}">
+        <div class="row row--jcsb widget__trading-row  input-row" [ngClass]="{'d-none': dropdownLimitValue === baseType.MARKET_PRICE}">
           <div class="wrap-input widget__input no-line">
             <app-price-input
             [placeholder]="translateService.instant('Total')"
@@ -97,6 +104,9 @@
             ></app-price-input>
           </div>
         </div>
+
+
+
         <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
           <div class="avaliable avaliable--aifl">
             <span>{{'Available:' | translate}} </span>
