cheat input + cosmetic fix

--- a/src/app/shared/components/cheating-input/cheating-input.component.html
+++ b/src/app/shared/components/cheating-input/cheating-input.component.html
@@ -1,3 +1,5 @@
-<p>
-  cheating-input works!
-</p>
+<div class="cheat-wr">
+	<div class="label">Price</div>
+	<div class="txt">Market</div>
+	<div class="currency">BTC</div>
+</div>
