--- a/src/app/dashboard/components/trading-mobile/trading-mobile.component.scss
+++ b/src/app/dashboard/components/trading-mobile/trading-mobile.component.scss
@@ -86,6 +86,9 @@
 .d-none {
   display: none;
 }
+.d-flex {
+  display: flex;
+}
 
 
 .trading-wr--mobile{
@@ -131,7 +134,7 @@
       margin-right: 8px;
     }
     .trade-buttons-wr{
-      
+
       button:nth-child(1){
         margin-right: 8px;
       }
