--- a/src/app/shared/components/cheating-input/cheating-input.component.html
+++ b/src/app/shared/components/cheating-input/cheating-input.component.html
@@ -1,5 +1,5 @@
 <div class="cheat-wr">
-	<div class="label">Price</div>
-	<div class="txt">Market</div>
-	<div class="currency">BTC</div>
+	<div class="label">{{label}}</div>
+	<div class="txt" >{{placeholder}}</div>
+	<div class="currency">{{currencyLabel}}</div>
 </div>
