--- a/src/app/dashboard/components/graph/graph.component.html
+++ b/src/app/dashboard/components/graph/graph.component.html
@@ -74,11 +74,11 @@
       <div class="trade-buttons-wr">
         <a class="btn btn--active widget__trading-btn widget__trading-btn--buy"
            (click)="toMobileWidget('trading')">
-          {{'Buy' | translate}} {{secondCurrency}}
+          {{'Buy' | translate}} {{firstCurrency}}
         </a>
         <a class="btn btn--active widget__trading-btn widget__trading-btn--sell"
            (click)="toMobileWidget('trading')">
-          {{'Sell' | translate}} {{secondCurrency}}
+          {{'Sell' | translate}} {{firstCurrency}}
         </a>
       </div>
     </div>
