--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
@@ -77,8 +77,12 @@
         <div class="table__details-item-value">{{item.exExchangeRate | currencyFormat:arrPairName[1]}} {{arrPairName[1]}}</div>
       </div>
       <div class="table__details-item">
-        <div class="table__details-item-title">{{'Filled' | translate}}</div>
-        <div class="table__details-item-value">{{item.exExchangeRate | currencyFormat:arrPairName[1]}} {{arrPairName[1]}}</div>
+        <div class="table__details-item-title">{{'Type' | translate}}</div>
+        <div class="table__details-item-value">
+          <span [ngClass]="{'txt-red': item.operationTypeEnum === 'SELL', 'txt-green': item.operationTypeEnum === 'BUY' }">
+            {{item.operationType | replaceChar: '_': ' '}}
+          </span>
+        </div>
       </div>
       <div class="table__details-item">
         <div class="table__details-item-title">{{'Fee' | translate}}</div>
