DEVEX-2598 fixed orderItem model

--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -33,7 +33,7 @@
               </svg>
             </th>
             <th class="table__cell-head table__cell-head--tal"> {{'Amount' | translate}}</th>
-            <th class="table__cell-head table__cell-head--tar">{{'Price' | translate}}</th>
+            <th class="table__cell-head table__cell-head--tar">{{'Limit Price' | translate}}</th>
           </tr>
         </thead>
         <tbody class="table__body table__body--none-shadow">
