--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -67,19 +67,25 @@
                 </div>
                 <div class="table__details-item">
                   <div class="table__details-item-title">{{'Limit Price' | translate}}</div>
-                  <div class="table__details-item-value">{{(item.exExchangeRate || item.limitRate) | currencyFormat}}</div>
+                  <div class="table__details-item-value">
+                    {{(item.exExchangeRate || item.limitRate) | currencyFormat}}
+                  </div>
                 </div>
                 <div class="table__details-item" *ngIf="item.stopRate">
                   <div class="table__details-item-title">{{'Stop Price' | translate}}</div>
-                  <div class="table__details-item-value">{{item.stopRate | currencyFormat}}</div>
-                </div>
-                <div class="table__details-item">
-                  <div class="table__details-item-title">{{'Total Price' | translate}}</div>
-                  <div class="table__details-item-value">{{item.amountWithCommission}}</div>
+                  <div class="table__details-item-value">
+                    {{item.stopRate | currencyFormat}}
+                  </div>
                 </div>
                 <div class="table__details-item">
                   <div class="table__details-item-title">{{'Type' | translate}}</div>
                   <div class="table__details-item-value"><span class="txt-green">{{item.operationType | replaceChar: '_': ' '}}</span></div>
+                </div>
+                <div class="table__details-item">
+                  <div class="table__details-item-title">{{'Total' | translate}}</div>
+                  <div class="table__details-item-value">
+                    {{item.amountWithCommission | currencyFormat}} {{item.currencyPairName | splitCurrency: 2}}
+                  </div>
                 </div>
                 <div class="table__details-item">
                   <div class="table__details-item-title">{{'Fee' | translate}}</div>
