--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
@@ -10,7 +10,7 @@
         </svg>
       </th>
       <th class="table__cell-head table__cell-head--tal">{{'Amount' | translate}}</th>
-      <th class="table__cell-head table__cell-head--tar">{{'Price' | translate}}</th>
+      <th class="table__cell-head table__cell-head--tar">{{'Limit Price' | translate}}</th>
       <th class="table__cell-head table__cell--arr-mob"><img class="" src="../../assets/img/arr-toggler-down-blue.svg" style="opacity: 0"></th>
     </tr>
   </thead>
@@ -57,7 +57,7 @@
       </div>
     </td>
     <td class="table__cell table__cell--tal">
-      <div>{{item.amountBase | currencyFormat:arrPairName[0]}}</div>
+      <div>{{item.amountBase | currencyFormat}}</div>
       <span
         [ngClass]="{'orders__type-sell': item.operationTypeEnum === 'SELL',
          'orders__type-buy': item.operationTypeEnum === 'BUY' }">
@@ -65,7 +65,7 @@
       </span>
     </td>
     <td class="table__cell table__cell--tar">
-      <span>{{item.exExchangeRate | currencyFormat:arrPairName[1]}}</span>
+      <span>{{(item.exExchangeRate || item.limitRate) | currencyFormat}}</span>
     </td>
     <td class="table__cell table__cell--arr-mob">
       <img [ngClass]="{'img-rotate': selectedOrder && selectedOrder.id === item.id}" src="../../assets/img/arr-toggler-down-blue.svg">
@@ -79,13 +79,26 @@
         <div class="table__details-item-value">{{item.id}}</div>
       </div>
       <div class="table__details-item">
-        <div class="table__details-item-title">{{'Total Price' | translate}}</div>
-        <div class="table__details-item-value">{{item.amountWithCommission | currencyFormat:arrPairName[1]}}</div>
+        <div class="table__details-item-title">{{'Limit Price' | translate}}</div>
+        <div class="table__details-item-value">
+          {{(item.exExchangeRate || item.limitRate) | currencyFormat}}
+        </div>
+      </div>
+      <div class="table__details-item" *ngIf="item.stopRate">
+        <div class="table__details-item-title">{{'Stop Price' | translate}}</div>
+        <div class="table__details-item-value">
+          {{item.stopRate | currencyFormat}}
+        </div>
       </div>
       <div class="table__details-item">
         <div class="table__details-item-title">{{'Type' | translate}}</div>
-        <div class="table__details-item-value"><span
-          class="txt-green">{{item.operationType | replaceChar: '_': ' '}}</span></div>
+        <div class="table__details-item-value">
+          <span class="txt-green">{{item.operationType | replaceChar: '_': ' '}}</span>
+        </div>
+      </div>
+      <div class="table__details-item">
+        <div class="table__details-item-title">{{'Total' | translate}}</div>
+        <div class="table__details-item-value">{{item.amountWithCommission | currencyFormat}} {{arrPairName[1]}}</div>
       </div>
       <div class="table__details-item">
         <div class="table__details-item-title">{{'Fee' | translate}}</div>
