DEVEX-3299 small refactoring

--- a/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
+++ b/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
@@ -25,7 +25,7 @@
         </ul>
       </div>
 
-      <div class="select refill__select" *ngIf="selectedMerchant">
+      <div class="select refill__select">
         <div class="select__value select__value--active"
               (click)="togglePaymentSystemDropdown()">
           <img [src]="selectMerchantName | getIconUrl" class="select__list-item-icon">
