--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -39,6 +39,9 @@
         </div>
       </div> -->
     </div>
+    <div class="row row__info" *ngIf="dropdownLimitValue === baseType.MARKET">
+      Max available to buy market order: {{maxMarketOrder | currencyFormat}} {{arrPairName[0]}}
+    </div>
     <div class="widget__trading-form--wr">
       <form class="widget__trading-form" action="" [formGroup]="buyForm">
         <div class="widget__trading-title-wr">
@@ -53,17 +56,27 @@
         <div class="row row--jcsb widget__trading-row  input-row">
           <div class="wrap-input widget__input no-line">
             <app-price-input
-            [placeholder]="translateService.instant('Quantity')"
-            [currencyLabel]="arrPairName[0]"
-            [forTrading]="true"
-            (customInput)="quantityInput($event, BUY)"
-            name="quantity"
-            formControlName="quantity"
+              [placeholder]="translateService.instant('Quantity')"
+              [currencyLabel]="arrPairName[0]"
+              [forTrading]="true"
+              (customInput)="quantityInput($event, BUY)"
+              name="quantity"
+              formControlName="quantity"
             ></app-price-input>
           </div>
         </div>
+        <div *ngIf="buyForm.get('quantity').touched && buyForm.get('quantity').errors">
+          <div class="">
+            <span
+              class="wrap-input__message wrap-input__message--error"
+              *ngIf="buyForm.get('quantity').errors['maxMarketOrder']"
+            >
+                {{'Max. available to buy' | translate}} {{maxMarketOrder | currencyFormat}} {{arrPairName[0]}}
+            </span>
+          </div>
+        </div>
 
-        <div class="row row--jcsb widget__trading-row  input-row d-none" [ngClass]="{'d-flex': dropdownLimitValue === baseType.MARKET_PRICE}">
+        <div class="row row--jcsb widget__trading-row  input-row d-none" [ngClass]="{'d-flex': dropdownLimitValue === baseType.MARKET}">
           <app-cheating-input
             [placeholder]="translateService.instant('Market')"
             [label]="translateService.instant('Price')"
@@ -72,38 +85,38 @@
         </div>
 
 
-        <div class="row row--jcsb widget__trading-row  input-row" [ngClass]="{'d-none': dropdownLimitValue === baseType.MARKET_PRICE}">
+        <div class="row row--jcsb widget__trading-row  input-row" [ngClass]="{'d-none': dropdownLimitValue === baseType.MARKET}">
           <div class="wrap-input widget__input no-line">
             <app-price-input
-            [placeholder]="translateService.instant('Limit Price')"
-            [currencyLabel]="arrPairName[1]"
-            [forTrading]="true"
-            (customInput)="rateInput($event, BUY)"
-            name="price"
-            formControlName="price"
+              [placeholder]="translateService.instant('Limit Price')"
+              [currencyLabel]="arrPairName[1]"
+              [forTrading]="true"
+              (customInput)="rateInput($event, BUY)"
+              name="price"
+              formControlName="price"
             ></app-price-input>
           </div>
         </div>
         <div class="row row--jcsb widget__trading-row  input-row" [ngClass]="{'d-none': dropdownLimitValue !== baseType.STOP_LIMIT}">
           <div class="wrap-input widget__input no-line">
             <app-price-input
-            [placeholder]="translateService.instant('Stop limit')"
-            [forTrading]="true"
-            (customInput)="stopInput($event, BUY)"
-            name="stop"
-            formControlName="stop"
+              [placeholder]="translateService.instant('Stop limit')"
+              [forTrading]="true"
+              (customInput)="stopInput($event, BUY)"
+              name="stop"
+              formControlName="stop"
             ></app-price-input>
           </div>
         </div>
-        <div class="row row--jcsb widget__trading-row  input-row" [ngClass]="{'d-none': dropdownLimitValue === baseType.MARKET_PRICE}">
+        <div class="row row--jcsb widget__trading-row  input-row" [ngClass]="{'d-none': dropdownLimitValue === baseType.MARKET}">
           <div class="wrap-input widget__input no-line">
             <app-price-input
-            [placeholder]="translateService.instant('Total')"
-            [currencyLabel]="arrPairName[1]"
-            [forTrading]="true"
-            (customInput)="totalInput($event, BUY)"
-            name="total"
-            formControlName="total"
+              [placeholder]="translateService.instant('Total')"
+              [currencyLabel]="arrPairName[1]"
+              [forTrading]="true"
+              (customInput)="totalInput($event, BUY)"
+              name="total"
+              formControlName="total"
             ></app-price-input>
           </div>
         </div>
@@ -171,7 +184,7 @@
           </div>
         </div>
 
-        <div class="row row--jcsb widget__trading-row  input-row d-none" [ngClass]="{'d-flex': dropdownLimitValue === baseType.MARKET_PRICE}">
+        <div class="row row--jcsb widget__trading-row  input-row d-none" [ngClass]="{'d-flex': dropdownLimitValue === baseType.MARKET}">
           <app-cheating-input
             [placeholder]="translateService.instant('Market')"
             [label]="translateService.instant('Price')"
@@ -179,7 +192,7 @@
           ></app-cheating-input>
         </div>
 
-        <div class="row row--jcsb widget__trading-row input-row" [ngClass]="{'d-none': dropdownLimitValue === baseType.MARKET_PRICE}">
+        <div class="row row--jcsb widget__trading-row input-row" [ngClass]="{'d-none': dropdownLimitValue === baseType.MARKET}">
           <div class="wrap-input widget__input no-line">
             <app-price-input
             [placeholder]="translateService.instant('Limit Price')"
@@ -202,7 +215,7 @@
             ></app-price-input>
           </div>
         </div>
-        <div class="row row--jcsb widget__trading-row input-row"  [ngClass]="{'d-none': dropdownLimitValue === baseType.MARKET_PRICE}">
+        <div class="row row--jcsb widget__trading-row input-row"  [ngClass]="{'d-none': dropdownLimitValue === baseType.MARKET}">
           <div class="wrap-input widget__input no-line">
             <app-price-input
             [placeholder]="translateService.instant('Total')"
