--- a/src/app/funds/balance/qubera-popup/qubera-kyc/qubera-kyc.component.html
+++ b/src/app/funds/balance/qubera-popup/qubera-kyc/qubera-kyc.component.html
@@ -33,7 +33,7 @@
 </div>
 <!-- modal header end -->
 
-<div class="modal__content">
+<div class="modal__content side-popups qubera-content">
   <app-step-one
     *ngIf="step === 1"
     (nextStep)="nextStep(2)"
