--- a/src/app/funds/balance/qubera-popup/transfer/transfer.component.html
+++ b/src/app/funds/balance/qubera-popup/transfer/transfer.component.html
@@ -1,4 +1,4 @@
-<div class="modal__content qubera-content">
+<div class="modal__content qubera-content side-popups">
 	<div class="fiat-deposit-s1 fiat-transfer">
 		<h2>{{'Transaction confirmation' | translate}}</h2>
 		<p>{{'Transaction confirmation' | translate}}To send money to your Exrates trading account, confirm the operation with a code and SMS.</p>
