--- a/src/assets/scss/components/_side-popups.scss
+++ b/src/assets/scss/components/_side-popups.scss
@@ -53,7 +53,7 @@
   width: 50%;
   text-align: left;
   color: #4B4B4B;
-    font-weight: 400;
+  font-weight: 400;
 }
 .send__info-value {
   width: 50%;
@@ -79,21 +79,21 @@
 }
 
 @media (min-width: 1200px) {
-  
-    .send__inputs-wrap {
-      flex-direction: row;
-      align-items: flex-start;
-      justify-content: space-between;
-      margin-bottom: 24px;
-    }
-    .send__select {
-      max-width: none;
-      margin-bottom: 0;
-      margin-right: 32px;
-    }
-    .send__wrap-input {
-      max-width: none;
-      margin-bottom: 0;
+
+  .send__inputs-wrap {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-bottom: 24px;
+  }
+  .send__select {
+    max-width: none;
+    margin-bottom: 0;
+    margin-right: 32px;
+  }
+  .send__wrap-input {
+    max-width: none;
+      // margin-bottom: 0;
       margin-right: 32px;
       &:last-child{
         margin-right: 0;
@@ -117,125 +117,384 @@
     }
     
 
-  
-  .modal__note {
-    width: calc(100% + 64px);
-    left: -32px;
-    margin-top: 32px;
-  }
-}
 
-// ----------------------
-.select__searching-item {
-  span {
-    color: #ccc;
-  }
-}
-
-.captcha-wrapper{
-  display: flex;
-  flex-direction: column;
-  re-captcha{
-    margin: 0 auto;
-  }
-}
-
-.select__search-input {
-  color: #ccc !important;
-}
-
-
-
-::ng-deep div.wrap-input.send__wrap-input {
-  .wrap-input__message{
-    color: #EB5757 !important;
-  }
-  app-price-input {
-    label {
-      background: #191A39 !important;
+    .modal__note {
+      width: calc(100% + 64px);
+      left: -32px;
+      margin-top: 32px;
     }
   }
-  &.wrap-input--error {
+
+
+
+  .captcha-wrapper{
+    display: flex;
+    flex-direction: column;
+    re-captcha{
+      margin: 0 auto;
+    }
+  }
+
+  .select__searching-item span {
+    color: #525F73;
+    font-weight: normal;
+  }
+
+
+
+  ::ng-deep div.wrap-input.send__wrap-input {
+    .wrap-input__message{
+      color: #EB5757 !important;
+    }
     app-price-input {
       label {
-        color: #EB5757 !important;
-      }
-      input:focus {
-        &+label{
-          color: #94C2FF !important;
-        }
+        background: #191A39 !important;
       }
     }
-  }
-}
-
-
-
-::ng-deep .send__inputs-wrap {
-  div.wrap-input {
-    &.send__wrap-input {
+    &.wrap-input--error {
       app-price-input {
         label {
-          @media(min-width: 1200px){
-
-            background-color: #fff !important;
+          color: #EB5757 !important;
+        }
+        input:focus {
+          &+label{
+            color: #94C2FF !important;
           }
         }
       }
     }
   }
-}
 
-.dark-theme {
-.side-popups{
 
- .wrap-input__message--show{
-  color: #237BEF;
-    font-size: 13px;
- }
 
-  perfect-scrollbar{
-  height: 160px;
-}
-  .loading-container {
-    margin-top: 40%;
-  }
-  .wrap-input--error {
-    .wrap-input__label {
-      color: #EB5757 !important;
-    }
-  }
-  @media (min-width: 1200px) {
-    .btn {
-      margin-bottom: 28px;
-      .value {
-        display: inline-block;
-      }
-    }
-  }
-  .btn {
-    margin-bottom: 24px;
-    .value {
-      display: none;
-    }
-  }
-  .btn--empty-blue{
-    &:hover, &:focus{
-      background-color: transparent !important;
-    }
-  }
+  ::ng-deep .send__inputs-wrap {
+    div.wrap-input {
+      &.send__wrap-input {
+        app-price-input {
+          label {
+            @media(min-width: 1200px){
 
-  .btn {
-    &.btn--center {
-      color: #ffffff !important;
-      &.btn--empty-blue {
-        color: #237BEF !important;
-        &:hover {
-          background-color: transparent !important;
-          border: 1px solid #237BEF !important;
+              background-color: #fff !important;
+            }
+          }
         }
       }
     }
   }
-}
-}
+
+  .dark-theme {
+    .side-popups{
+      .read{
+        border: 1px solid #ECECEC;
+        cursor: pointer;
+        border-radius: 2px;
+        display: block;
+        width: 16px;
+        height: 16px;
+        margin-right: 6px;
+        margin-top: -2px;
+        position: relative;
+        @media(max-width: 1200px){
+          border: 1px solid #DEDEFB;
+        }
+        &::after{
+          content: "";
+          position: absolute;
+          top: 2px;
+          right: 0;
+          display: block;
+          width: 13px;
+          height: 10px;
+          content: "";
+          background-image: url(/assets/img/step-valid.svg);
+          background-repeat: no-repeat;
+          background-position: center;
+          background-size: 100%;
+          opacity: 0;
+          transition: .3s;
+          @media(max-width: 1200px){
+            background-image: url(/assets/img/check.svg);
+          }
+        }
+      }
+
+      #read {
+        display: none;
+      }
+
+      .check{
+        display: flex;
+        align-items: center;
+        span{
+          font-weight: 500;
+          font-size: 13px;
+          line-height: 1.15;
+          color: #525F73;
+          @media(max-width: 1200px){
+            color: #DEDEFB;
+          }
+        }
+
+        input{
+          &:checked{
+            &+label{
+              &::after{
+
+                opacity: 1;
+              }
+            }
+          }
+        }
+      }
+
+      .rules{
+        p{
+          a{
+            font-weight: 400;
+            font-size: 13px;
+            line-height: 1.15;
+            color: #237BEF;
+            text-decoration: none;
+          }
+        }
+      }
+
+      .select-input_label {
+        top: -5px;
+        padding: 0 2px;
+        font-size: 10px;
+        line-height: 12px;
+        z-index: 100;
+        background-color: #fff;
+      }
+      .wrap-input__message--show{
+        color: #237BEF;
+        font-size: 13px;
+      }
+
+      perfect-scrollbar{
+        height: 160px;
+      }
+      .loading-container {
+        margin-top: 40%;
+      }
+      .wrap-input--error {
+        .wrap-input__label {
+          color: #EB5757 !important;
+        }
+      }
+
+      .btn {
+        margin-bottom: 24px;
+        .value {
+          display: none;
+        }
+      }
+      @media (min-width: 1200px) {
+        .btn {
+          margin-bottom: 28px;
+          .value {
+            display: inline-block;
+          }
+        }
+      }
+
+      .btn--empty-blue{
+        &:hover, &:focus{
+          background-color: transparent !important;
+        }
+      }
+
+      .btn {
+        &.btn--center {
+          color: #ffffff;
+          &:disabled {
+            background-color: transparent;
+            pointer-events: none;
+            color: #91929F;
+            border-color: #91929F;
+          }
+          &.btn--empty-blue {
+            color: #237BEF;
+            &:disabled {
+              background-color: transparent;
+              pointer-events: none;
+              color: #91929F;
+              border-color: #91929F;
+            }
+            &:hover {
+              background-color: transparent !important;
+              border: 1px solid #237BEF !important;
+            }
+          }
+        }
+      }
+    }
+  }
+  .btn-active {
+    background-color: #237BEF;
+    color: #fff;
+  }
+  .qubera-content{
+
+    .choose-block {
+      margin-top: 10px;
+      margin-bottom: 20px;
+    }
+    h2 {
+      font-weight: normal;
+      font-size: 24px;
+      line-height: 28px;
+      text-align: center;
+      color: #191A39;
+      margin-bottom: 30px;
+      @media(max-width: 1200px){
+        color: #DEDEFB;
+      }
+    }
+    h3 {
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 21px;
+      text-align: center;
+      color: #000;
+      margin-bottom: 24px;
+      @media(max-width: 1200px){
+        color: #DEDEFB;
+      }
+    }
+    .inf-code {
+      font-size: 14px;
+      line-height: 16px;
+      text-align: center;
+      color: #000000;
+      margin-bottom: 30px;
+    }
+    form {
+      max-width: 400px;
+      width: 100%;
+      margin: 0 auto;
+    }
+
+    form .input-block {
+      max-width: 260px;
+      position: relative;
+      margin: 0 auto 20px;
+    }
+
+    .change-number {
+      text-align: center;
+    }
+
+    .change-number a {
+      font-size: 12px;
+      color: #237BEF;
+    }
+
+    .notice-block{
+      margin-top: 50px;
+    }
+
+    .fiat-deposit-s1 form{
+      border: none;
+    }
+
+    .wrap-input__message {
+      margin-bottom: 10px;
+    }
+
+
+    form .action a {
+      font-weight: normal;
+      font-size: 16px;
+      text-align: center;
+      color: #FFFFFF;
+      background: #ECECEC;
+      border-radius: 4px;
+      padding: 14px 60px;
+      cursor: pointer;
+    }
+
+    form .select {
+      width: 100%;
+      margin-bottom: 10px;
+    }
+
+    form .wrap-input {
+      margin-bottom: 10px;
+    }
+
+    form .rules {
+      margin-top: 38px;
+      margin-bottom: 50px;
+    }
+
+    form .rules p{
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 13px;
+      line-height: 15px;
+      color: #525F73;
+      margin-bottom: 16px;
+      @media(max-width: 1200px){
+        color: #DEDEFB;
+      }
+    }
+
+    form .action {
+      display: flex;
+      justify-content: center;
+    }
+
+    .select__list-searching-body {
+      overflow-y: auto!important;
+    }
+    .transaction__datepicker {
+      width: 100%!important;
+    }
+
+
+  }
+
+
+  .fiat-withdraw-s1{
+    form{
+      max-width: unset;
+      width: auto;
+      margin: 0 30px;
+
+    }
+    .main-form{
+      align-items: flex-start;
+      .select{
+        width: calc(33.333% - 15px);
+      }
+      .wrap-input{
+        width: calc(33.3333% - 15px);
+        &>.fiat-amount{
+          width: 100%;
+        }
+        .avaliable{
+          font-size: 12px;
+          line-height: 14px;
+          position: absolute;
+          top: -17px;
+          right: 0;
+
+        }
+      }
+
+    }
+    .secundary-form {
+    .input-block{
+      margin: 0 0 20px;
+    }
+      .select{
+        width: calc(50% - 15px);
+      }
+    }
+    .form-wr {
+      margin: 0 30px;
+    }
+  }
