--- a/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
+++ b/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
@@ -25,7 +25,41 @@
         </ul>
       </div>
 
-      <div class="select refill__select">
+      <!-- <div class="select refill__select" *ngIf="selectedMerchant">
+        <div class="select__value select__value--active"
+             (click)="togglePaymentSystemDropdown()">
+          <img [src]="selectMerchantName | getIconUrl" class="select__list-item-icon">
+          {{selectMerchantName}}
+        </div>
+        <div class="select__label">{{'Payment system' | translate}}</div>
+        <div class="select__line"></div>
+        <div class="select__triangle"></div>
+        <div class="select__list-searching"
+             [ngClass]="{'select__list-searching--open': openPaymentSystemDropdown}"
+             *ngIf="openPaymentSystemDropdown">
+          <div class="select__search">
+            <input class="select__search-input" type="text" placeholder="Search" (input)="searchMerchant($event)">
+            <div class="select__search-icon">
+              <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"/>
+              </svg>
+            </div>
+          </div>
+          <ul class="select__list select__list--open">
+            <ng-template ngFor let-merchant [ngForOf]="merchants">
+              <li class="select__list-item"
+                  *ngFor="let nested of merchant.listMerchantImage | merchantImageFilter: searchTemplate"
+                  (click)="selectMerchant(merchant, nested)">
+                <img [src]="nested.image_name | getIconUrl" class="select__list-item-icon">
+                {{nested.image_name}}
+              </li>
+            </ng-template>
+          </ul>
+        </div>
+      </div> -->
+
+      <div class="select refill__select" *ngIf="selectedMerchant">
         <div class="select__value select__value--active"
               (click)="togglePaymentSystemDropdown()">
           <img [src]="selectMerchantName | getIconUrl" class="select__list-item-icon">
@@ -105,7 +139,7 @@
             <span class="value-info">{{bankInfo?.swiftCode}}</span>
           </div>
         </div>
-        <button class="print" (click)="download()">
+        <a class="print" (click)="download()">
           <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19" fill="none">
             <path d="M11.8748 14.25H5.9375V15.4377H11.8748V14.25Z" fill="#237BEF"/>
             <path d="M4.75009 1.18755H14.25V3.56254H15.4373V1.18755C15.4374 0.532356 14.9062 0 14.25 0H4.75009C4.09425 0 3.5625 0.532356 3.5625 1.18755V3.56254H4.75009V1.18755Z" fill="#237BEF"/>
@@ -113,7 +147,7 @@
             <path d="M17.8126 4.75H1.18759C0.531746 4.75 0 5.2822 0 5.93743V13.0625C0 13.7188 0.531746 14.2498 1.18759 14.2498H3.56265V17.8124C3.56265 18.4689 4.09439 19 4.75023 19H14.2501C14.9064 19 15.4375 18.4689 15.4375 17.8124V14.2498H17.8126C18.4689 14.2498 19 13.7188 19 13.0625V5.93743C19 5.2822 18.469 4.75 17.8126 4.75ZM14.2501 17.8125H4.75023V10.6874H14.2501V17.8125ZM16.6249 8.31254C15.9686 8.31254 15.4375 7.78139 15.4375 7.12498C15.4375 6.46983 15.9686 5.93743 16.6249 5.93743C17.2814 5.93743 17.8126 6.46979 17.8126 7.12498C17.8126 7.78136 17.2814 8.31254 16.6249 8.31254Z" fill="#237BEF"/>
           </svg>
           <span>{{'Print invoice' | translate}}</span>
-        </button>
+        </a>
       </div>
     </div>
     <!-- <div class="right-part"> -->
